--- a/index.html
+++ b/index.html
@@ -12,7 +12,67 @@
 
 
 
+    <section class="marcas">
+        <h2>Nos encantaría añadir tu logotipo acá</h2>
+        <article class="marcas-icons">
 
+        </article>
+    </section>
+    <section class="contacto">
+        <article class="contacto__iconos">
+            <div class="">
+                <img src="./img/iconoPin.webp" alt="Icono pin">
+            </div>
+            <div class="">
+                <img src="./img/iconoCorreo.webp" alt="Icono correo">
+            </div>
+            <div>
+                <img src="./img/iconoTelefono.webp" alt="Icono telefono">
+            </div>
+        </article>
+        <form action="https://formspree.io/f/mvolkdyq" id="form" class="form" method="post">
+            <div class="form__field">
+                <input type="text" id="name" name="name" placeholder="Nombre" required>
+                <input type="text" id="tel" name="tel" placeholder="Telefono" required>
+                <input type="email" id="email" placeholder="Email" name="email"
+                    pattern="[/^(([^<>()\[\]\.,;:\s@\”]+(\.[^<>()\[\]\.,;:\s@\”]+)*)|(\”.+\”))@(([^<>()[\]\.,;:\s@\”]+\.)+[^<>()[\]\.,;:\s@\”]{2,})$/]">
+                <textarea name="message" id="msg" placeholder="Asunto" cols="37" rows="5" required></textarea>
+                <button id="my-form-button" class="boton">Enviar</button>
+            </div>
+        </form>
+    </section>
+    <footer class="footer">
+        <div class="footer-img">
+            <img src="./img/logoBlacKaimx.webp" alt="Logo Kaimix">
+        </div>
+        <p>&copy; Kaimix. Todos los derechos reservados.</p>
+        <div class="footer-icons">
+            <a href="https://wa.link/7tqiun" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="35"
+                    height="35" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+                    <path
+                        d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+                </svg>
+            </a>
+            <a href="https://www.instagram.com/kaimix.devs/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="35"
+                    height="35" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <rect x="4" y="4" width="16" height="16" rx="4" />
+                    <circle cx="12" cy="12" r="3" />
+                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                </svg>
+            </a>
+        </div>
+    </footer>
+    <!-- scripts -->
+    <script src="js/index.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js'></script>
     
 </body>
 </html>
