--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 </head>
 <body>
 
-
-
     <section class="marcas">
-        <h2>Nos encantaría añadir tu logotipo acá</h2>
+        <h2>Nos encantaría añadir tu logotipo acá.</h2>
         <article class="marcas-icons">
-
+            <img src="./img/Logo KaimixBl.png" alt="">
         </article>
     </section>
     <section class="contacto">
         <article class="contacto__iconos">
-            <div class="">
+            <div class="contacto__iconos--active">
                 <img src="./img/iconoPin.webp" alt="Icono pin">
+                <p>Calle falsa 123</p>
             </div>
-            <div class="">
+            <div class="contacto__iconos--active">
                 <img src="./img/iconoCorreo.webp" alt="Icono correo">
+                <p>email@email.com</p>
             </div>
-            <div>
+            <div class="contacto__iconos--active">
                 <img src="./img/iconoTelefono.webp" alt="Icono telefono">
+                <p>+54 1123430012</p>
             </div>
         </article>
         <form action="https://formspree.io/f/mvolkdyq" id="form" class="form" method="post">
