--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,18 @@
     <!-- Links CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <section class="marcas">
-        <h2>Nos encantaría añadir tu logotipo acá.</h2>
+        <h3>Nos encantaría añadir tu logotipo acá.</h3>
         <article class="marcas-icons">
             <img src="./img/Logo KaimixBl.png" alt="">
         </article>
+    </section>
+    <section class="contacto__header">
+        <h3>Contacto</h3>
+        <p>Estamos disponibles para trabajar en su proyecto y<br> hacer realidad sus ideas.</p>
     </section>
     <section class="contacto">
         <article class="contacto__iconos">
@@ -31,7 +37,7 @@
                 <p>+54 1123430012</p>
             </div>
         </article>
-        <form action="https://formspree.io/f/mvolkdyq" id="form" class="form" method="post">
+        <form action="https://formspree.io/f/mwkynolr" id="form" class="form" method="post">
             <div class="form__field">
                 <input type="text" id="name" name="name" placeholder="Nombre" required>
                 <input type="text" id="tel" name="tel" placeholder="Telefono" required>
@@ -54,7 +60,7 @@
                     stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                     <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
-                    <path
+                    <path |
                         d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
                 </svg>
             </a>
@@ -74,6 +80,7 @@
     <script src="js/index.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js'></script>
-    
+
 </body>
+
 </html>
