responsive al footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="marcas">
         <h3>Nos encantaría añadir tu logotipo acá.</h3>
         <article class="marcas-icons">
-            <img src="./img/Logo KaimixBl.png" alt="">
+            <img src="./img/msico.svg" alt="">            
         </article>
     </section>
     <section class="contacto__header">
