cambie imagen del footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <footer class="footer">
         <div class="footer-img">
-            <img src="./img/logoBlacKaimx.webp" alt="Logo Kaimix">
+            <img src="./img/LogoKiamixFondoGris.png" alt="Logo Kaimix">
         </div>
         <p>&copy; Kaimix. Todos los derechos reservados.</p>
         <div class="footer-icons">
