--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="/img/hombreAvion.webp" alt="hombre en avión">
             </div>
             <div class="descripcion">
-                <h2>Nuestra <br> filosofía</h2>
+                <h2>Nuestra filosofía</h2>
                 <p>
                     Aceptamos los retos y asumimos cada proyecto como personal.
 
@@ -45,11 +45,10 @@
                 </p>
             </div>
         </section>
-        <hr>
         <section id="servicios">
             <div id="titulo-servicios">
                 <h3>Nuestros servicios</h3>
-                <h2>Con grandes ideas, mucho trabajo creamos <br> proyectos que hacen alos clientes felice</h2>
+                <h2>Con grandes ideas, mucho trabajo creamos proyectos que hacen a los clientes felices</h2>
             </div>
             <p class="descripcion">Utilizamos varias tecnologías para desarrollar sitios web atractivos que
                 conviertan a
@@ -76,21 +75,25 @@
         <article id="tarjetas">
             <div class="tarjeta">
                 <img class="icono-tarjeta" src="/img/iconoCodigo.webp" alt="icono de código">
-                <h4>PROGRAMACION WEB</h4>
+                <h4 class="titulo_tarjeta">PROGRAMACION WEB</h4>
                 <p>Cada proyecto es distinto, por eso cada uno se desarrolla a medida según los requerimientos del
                     proyecto y la necesidad
                     de los usuarios.</p>
             </div>
             <div class="tarjeta">
-                <img class="icono-tarjeta" src="/img/iconoPin.webp" alt="">
-                <h4>DISEÑO WEB</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" width="4rem" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                        d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                        clip-rule="evenodd" />
+                </svg>
+                <h4 class="titulo_tarjeta">DISEÑO WEB</h4>
                 <p>Construímos nuestros sitios web de forma Responsive o Mobile-First según cada proyecto, para que se
                     adapte a todos los
                     dispositivos del mercado.</p>
             </div>
             <div class="tarjeta">
                 <img class="icono-tarjeta" src="/img/iconoBuscador.webp" alt="">
-                <h4>SERVICIO DE SEO</h4>
+                <h4 class="titulo_tarjeta">SERVICIO DE SEO</h4>
                 <p>Identificamos y analizamos los factores principales de tu mercado con el fin de contribuir a
                     desarrollar una estrategia
                     más competente.</p>
@@ -99,44 +102,45 @@
         <section id="imagen-main">
             <img src="/img/computadoras.webp" alt="computadora">
         </section>
-        <section>
+        <section id="confianza">
             <p>Por qué confiar en nosotros</p>
-            <h2>Estas son las cosas que nos hacen únicos</h2><br>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+            <h2>Estas son las cosas que nos hacen únicos</h2>
+            <br>
+            <div id="confianza-1">
+                <div class="tarjeta-t">
+                    <h2><img src="/img/iconoFocus.webp" alt="">OBJETIVOS</h2>
+                    <p>Cada proyecto es un nuevo desafío para nosotros, por eso armamos nuestros equipos según la
+                        necesidades de cada proyecto.</p>
+                </div>
+                <div class="tarjeta-t">
+
+                    <h2><img src="/img/iconoCorazon.webp" alt="">COMPROMISO</h2>
+                    <p>Invertimos nuestra profesionalidad, compromiso y cuidado en todo lo que hacemos..</p>
+                </div>
+                <div class="tarjeta-t">
+                    <h2><img src="/img/iconoManos.webp" alt="">CONFIANZA</h2>
+                    <p>Practicamos lo que predicamos. Escuchamos todas las voces. Generamos confianza</p>
+                </div>
+                <div class="tarjeta-t">
+                    <h2><img src="/img/iconoLamparita.webp" alt="">CURIOSIDAD</h2>
+                    <p>Nuestra clave del éxito es no perder la curiosidad nunca. Siempre hacemos un esfuerzo adicional.
+                    </p>
+                </div>
+                <div class="tarjeta-t">
+                    <h2><img src="/img/iconoCerebro.webp" alt="">ESTRATEGIA</h2>
+                    <p>Sabemos que quienes nos eligen quieren potenciar su negocio, por eso nuestras decisiones son 100%
+                        estratégicas.</p>
+                </div>
+                <div class="tarjeta-t">
+                    <h2><img src="/img/iconoOjo.webp" alt="">ENFOQUE</h2>
+                    <p>Nuestro enfoque nos permite obtener los resultados esperados.</p>
+                </div>
             </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+            <div class="tarjeta-t gente">
+                <h2><img src="/img/iconoCaraFeliz.webp" alt="">GENTE</h2>
+                <p>No solo se trata de programar, generamos un lazo directo entre el cliente y nosotros.</p>
             </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </div>
-            <div class="tarjeta-t">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </div>
+            <br><br>
             <p>Somos mucho más que un equipo</p>
         </section>
     </main>
