--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
                     <h2><img src="/img/iconoOjo.webp" alt="">ENFOQUE</h2>
                     <p>Nuestro enfoque nos permite obtener los resultados esperados.</p>
                 </div>
-                <div class="tarjeta-t gente">
+                <div id="gente" class="tarjeta-t">
                     <h2><img src="/img/iconoCaraFeliz.webp" alt="">GENTE</h2>
                     <p>No solo se trata de programar, generamos un lazo directo entre el cliente y nosotros.</p>
                 </div>
             </div>
-            <br><br><br><br><br><br>
-            <p>Somos mucho más que un equipo</p>
+            <br><br><br><br>
+            <p id="somos">Somos mucho más que un equipo</p>
 
 
         </section>
